@@ -22,6 +22,7 @@ plugins {
     id("AndroidXPlugin")
     id("com.android.library")
     id("kotlin-android")
+    id("com.google.protobuf")
 }
 
 dependencies {
@@ -49,12 +50,17 @@ dependencies {
     testImplementation(files(toolsJar))
 
     testImplementation(libs.kotlinStdlib)
+    testImplementation(libs.protobufLite)
+    testImplementation(libs.guavaAndroid)
     testImplementation(project(":compose:compiler:compiler-hosted"))
+    testImplementation(projectOrArtifact(":compose:foundation:foundation"))
     testImplementation(projectOrArtifact(":compose:material:material"))
     testImplementation(project(":compose:runtime:runtime"))
     testImplementation(projectOrArtifact(":compose:ui:ui"))
     testImplementation("androidx.core:core-ktx:1.1.0")
     testImplementation("androidx.activity:activity-ktx:1.2.0")
+    testImplementation("org.jetbrains.kotlinx:kotlinx-collections-immutable-jvm:0.3.4")
+    testImplementation("com.google.dagger:dagger:2.40.1")
 }
 
 afterEvaluate {
@@ -62,6 +68,7 @@ afterEvaluate {
         t.dependsOn(":compose:compiler:compiler:embeddedPlugin")
 
         maxHeapSize("1024m")
+        t.jvmArgs += ["--add-opens=jdk.jdi/com.sun.tools.jdi=ALL-UNNAMED"]
     }
 }
 
@@ -75,15 +82,27 @@ android {
     namespace "androidx.compose.runtime.tests"
 }
 
-tasks.withType(KotlinCompile).configureEach {
-    kotlinOptions {
-        freeCompilerArgs += ["-opt-in=kotlin.RequiresOptIn"]
-    }
-}
-
 androidx {
     name = "AndroidX Compiler CLI Tests"
     publish = Publish.NONE
     inceptionYear = "2019"
     description = "Contains test for the compose compiler plugin"
+}
+
+protobuf {
+    protoc {
+        artifact = libs.protobufCompiler.get()
+    }
+    // Generates the java proto-lite code for the protos in this project. See
+    // https://github.com/google/protobuf-gradle-plugin#customizing-protobuf-compilation
+    // for more information.
+    generateProtoTasks {
+        all().each { task ->
+            task.builtins {
+                java {
+                    option "lite"
+                }
+            }
+        }
+    }
 }
